# uacraft-be

./: .env.example  .env_example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
apps/: api_tags.py  asgi.py  urls.py  wsgi.py
apps/common/: emails.py  models.py
apps/common/permissions/: __init__.py  read_only_admin_modify_permission.py  responses.py
apps/products/: apps.py  urls.py
apps/products/admin/: __init__.py  brand.py  category.py  price.py  product.py  product_image.py  seller.py  store.py
apps/products/migrations/: 0001_initial.py
apps/products/models/: __init__.py  brand.py  category.py  price.py  product.py  product_image.py  seller.py  store.py
apps/products/serializers/: __init__.py  brand.py  category.py  price.py  product.py  product_image.py  seller.py  store.py
apps/products/views/: __init__.py  brand.py  category.py  product.py
apps/users/: admin.py  apps.py  managers.py  models.py  tasks.py  urls.py
apps/users/migrations/: 0001_initial.py
apps/users/serializers/: __init__.py  confirm_email_complete.py  login.py  logout.py  registration.py
apps/users/utils/: security.py
apps/users/views/: __init__.py  confirm_email_complete.py  (+3 more)
backend/: Dockerfile  requirements.txt  vercel.json
backend/api/: index.py
backend/backend/: schema.py  settings.py  urls.py  wsgi.py
backend/onlinestore/: admin.py  models.py  schema.py  urls.py  views.py
backend/users/: forms.py  urls.py  views.py
requirements/: base.txt  development.txt
settings/: __init__.py  base.py  main.py
(+8 files in other folders)
