[tool.poetry]
name = "uacraft-be"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "uacraft_be"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.1"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"
graphene-django = "^3.2.0"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
