[tool.poetry]
name = "uacraft-be"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "uacraft_be"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-environ = "^0.11.2"
django-cors-headers = "^4.3.1"
django-extensions = "^3.2.3"
djangorestframework = "^3.15.1"
gunicorn = "^22.0.0"
whitenoise = "^6.6.0"
sqlparse = "^0.5.0"
psycopg2-binary = "^2.9.9"
unidecode = "^1.3.8"
drf-spectacular = {extras = ["sidecar"], version = "^0.27.2"}
python-slugify = "^8.0.4"
pillow = "^10.3.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
ipython = "^8.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
force_single_line = true
line_length = 120
order_by_type = false
profile = 'black'